--- a/xyz.css
+++ b/xyz.css
@@ -3,15 +3,14 @@
     padding: 0;
     font-family: Arial, sans-serif;
     background-color: #008080;
-   
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
     box-shadow: 0 0 200px rgba(0,0,0,0.9) inset;
     color: #fff;
+    background: linear-gradient(#008080, rgba(255, 255, 255, 0.5)), url('newback.jpg');
 }
-
 .container {
     display: flex;
     justify-content: space-between;
@@ -20,12 +19,19 @@
 }
 
 header {
-    background-color: #111;
+    background-color: #000000;
 }
 
-/* .logo  {
-    
-} */
+.logo  {
+    margin-left: -25px;
+    margin-right: 100px;
+    width: 30px;
+    height: 10px;
+    margin-left: 10px;
+    border-radius: 20px;
+
+
+}
 
 nav ul {
     list-style-type: none;
@@ -59,29 +65,35 @@ nav ul li a.active, nav ul li a:hover {
 }
 
 .hero-content h2 {
-    color: #ffffff;
+    color: #d9ff00;
     font-size: 48px;
-    margin: 0;
+    margin: 10px;
     font-family: monaco,Consolas,Lucida Console,monospace;
     text-shadow: 5px 5px 10px black;
   
 }
 
 .hero-content h1 {
-    font-size: 72px;
+    /* font-size: 72px;
     margin: 10px 0;
     text-shadow: 5px 5px 10px black;
-    
     padding: 10px 10px;
-    font-family: Tahoma, Verdana, sans-serif;
+    font-family: Tahoma, Verdana, sans-serif; */
     /* font-weight: bold; */
+    font-family: 'Bahnschrift', sans-serif;
+    font-size: 72px;
+    font-weight: bold;
+    position: relative;
+padding: 10px 10px;
+margin: 10px 0;
+text-shadow: 5px 5px 10px black;
 
 }
 
 .hero-content .btn {
     margin: 0 auto;
     padding: 15px 30px;
-    background:linear-gradient(90deg, #4169E1,rgb(7, 76, 214));
+    background:linear-gradient(90deg, #2244aa,rgb(4, 38, 107));
     color: #fff;
     text-decoration: none;
     font-weight: bold;
@@ -156,6 +168,7 @@ nav ul li a.active, nav ul li a:hover {
   #right{
     padding-left: 550px;
     justify-content: left;
+    margin-left: 450px;
   }
   .log{
     padding-top: 50px;
@@ -173,4 +186,9 @@ nav ul li a.active, nav ul li a:hover {
     margin-left: 10px;
     border-radius: 20px;
    box-shadow: #00f7ff;
+   
   }
+.bkimg{
+    opacity: 0.2;
+    width: 10px;
+}
