--- a/xyz.css
+++ b/xyz.css
@@ -22,16 +22,34 @@ header {
     background-color: #000000;
 }
 
-.logo  {
-    margin-left: -25px;
+.logo {
+    margin-left: 10px;
     margin-right: 100px;
     width: 30px;
     height: 10px;
-    margin-left: 10px;
     border-radius: 20px;
-
-
 }
+
+/* For screens that are 768px wide or less */
+@media (max-width: 768px) {
+    .logo {
+        margin-left: 5px;
+        margin-right: 50px;
+        width: 25px;
+        height: 8px;
+    }
+}
+
+/* For screens that are 480px wide or less */
+@media (max-width: 480px) {
+    .logo {
+        margin-left: 2px;
+        margin-right: 20px;
+        width: 20px;
+        height: 6px;
+    }
+}
+
 
 nav ul {
     list-style-type: none;
@@ -52,6 +70,40 @@ nav ul li a {
 
 nav ul li a.active, nav ul li a:hover {
     color: hsl(0, 0%, 100%);
+}
+
+/* For screens that are 768px wide or less */
+@media (max-width: 1600px) {
+    nav ul {
+        flex-direction: row;
+        align-items: flex-start;
+
+    }
+
+    nav ul li {
+        margin-left: 0;
+        margin-bottom: 10px;
+        gap: 20px;
+    }
+}
+
+/* For screens that are 480px wide or less */
+@media (max-width: 1600px) {
+    nav ul {
+        flex-direction: row;
+        align-items: flex-start;
+    }
+
+    nav ul li {
+        margin-left: 0;
+        margin-bottom: 5px;
+        gap: 20px;
+    }
+
+    nav ul li a {
+        font-size: 14px;
+        margin-left: 15px;
+    }
 }
 
 .hero {
@@ -165,11 +217,28 @@ text-shadow: 5px 5px 10px black;
    
     height: auto;
   }
-  #right{
+  #right {
     padding-left: 550px;
     justify-content: left;
     margin-left: 450px;
-  }
+}
+
+/* For screens that are 768px wide or less */
+@media (max-width: 768px) {
+    #right {
+        padding-left: 50px;
+        margin-left: 0;
+    }
+}
+
+/* For screens that are 480px wide or less */
+@media (max-width: 480px) {
+    #right {
+        padding-left: 20px;
+        margin-left: 0;
+    }
+}
+
   .log{
     padding-top: 50px;
     padding-bottom: 50px;
