--- a/xyz.css
+++ b/xyz.css
@@ -26,11 +26,18 @@ header {
     margin-left: -25px;
     margin-right: 100px;
     width: 30px;
-    height: 10px;
+    height: 15px;
     margin-left: 10px;
     border-radius: 20px;
-
-
+    padding-block: 20px;
+    margin-top: -40px;
+    
+}
+.lgimg{
+    padding-block: -20px;
+    padding-inline: -20px;
+    width: 200px;
+    margin-top: 15px;
 }
 
 nav ul {
@@ -146,7 +153,7 @@ text-shadow: 5px 5px 10px black;
     scroll-behavior: smooth;
   }
   .jpg{
-    width: 250px;
+    width: 315px;
     height: 200px;
     opacity: 0.5;
   
