--- a/xyz.css
+++ b/xyz.css
@@ -152,6 +152,7 @@ text-shadow: 5px 5px 10px black;
    html {
     scroll-behavior: smooth;
   }
+  /* sexy */
   .jpg{
     width: 300px;
     height: 200px;
