--- a/xyz.css
+++ b/xyz.css
@@ -16,6 +16,12 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px 50px;
+    /* edit for fixed navbar */
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #000000;
+    z-index: 1000; 
 }
 
 header {
