--- a/afterlogin.css
+++ b/afterlogin.css
@@ -191,7 +191,7 @@ nav ul li a.active, nav ul li a:hover {
 
 #sign {
     background-color: #d0ff00;
-    width: 60px;
+    width: 80px;
     height: 30px;
     margin-left: 10px;
     border-radius: 20px;
@@ -494,3 +494,21 @@ nav ul li a.active, nav ul li a:hover {
     }
 }
 
+/* user logo */
+/* Style for the user profile icon */
+.user-profile {
+    display: inline-block;
+    margin-left: 20px; 
+}
+
+.profile-img {
+    width: 40px;
+    height: 40px;
+margin-left: 20px;
+border-radius: 20px;
+
+}
+
+
+
+  
